styles/components/vertical-menu.css
@layer components {
    .vertical-menu {
        @apply fixed inset-y-0 -left-64 z-30 w-64 border-gray-200 shadow-none duration-300 ease-in-out lg:left-0 lg:shadow-lg;
    }
    .vertical-content {
        @apply h-full bg-white dark:bg-dark-primary [&.semi-dark]:bg-dark-primary;
    }
    .toggle-menu .vertical-menu,
    .collapsible-vertical:not(.toggle-menu) .vertical-menu {
        @apply fixed inset-y-0 left-0 z-30 lg:w-[70px] lg:hover:w-64 !important;
    }
    .toggle-menu .vertical-menu {
        @apply left-0 w-64 shadow-lg !important;
    }
    .vertical.toggle-menu .vertical-menu {
        @apply lg:-left-64 lg:shadow-none !important;
    }
    .collapsible-vertical:not(.toggle-menu) .vertical-menu {
        @apply -left-64 shadow-none lg:left-0 lg:shadow-lg !important;
    }
    .boxed-layout .vertical-menu {
        @apply lg:left-auto;
    }
    .menu-shadow {
        @apply fixed inset-0 z-20 cursor-pointer bg-black opacity-50 transition-opacity lg:hidden;
    }
    .collapse-icon {
        @apply flex h-8 w-8 items-center rounded-full transition duration-300 hover:bg-gray-500/10 rtl:rotate-180;
    }
    .semi-dark .collapse-icon svg {
        @apply fill-gray-300;
    }
    .tw-brand-logo {
        @apply relative flex h-[70px] items-center justify-between border-b px-4 py-2 dark:border-b-gray-700;
    }
    .semi-dark .tw-brand-logo {
        @apply border-b-gray-700;
    }
    .brand-logo-image {
        @apply h-10 w-10;
    }
    .app-name {
        @apply dark--text visible mx-2 text-xl font-semibold opacity-100 transition-opacity duration-500 ease-in-out;
    }
    .semi-dark .app-name {
        @apply text-gray-400;
    }
    .vertical.toggle-menu .vertical-menu:not(:hover) .app-name,
    .collapsible-vertical:not(.toggle-menu) .vertical-menu:not(:hover) .app-name {
        @apply lg:invisible lg:opacity-0;
    }
    .tw-menu-header {
        @apply dark--text relative w-full truncate pt-2 text-xs font-semibold uppercase text-gray-400;
        @apply px-2 after:absolute after:left-0 after:top-3 after:w-full after:bg-gray-300;
    }
    .vertical-menu .tw-menu-header .icon {
        @apply hidden;
    }
    .vertical.toggle-menu .vertical-menu:not(:hover) .tw-menu-header .label,
    .collapsible-vertical:not(.toggle-menu) .vertical-menu:not(:hover) .tw-menu-header .label,
    .vertical-menu .tw-menu-header .icon {
        @apply lg:hidden;
    }
    .vertical.toggle-menu .vertical-menu:not(:hover) .tw-menu-header .icon,
    .collapsible-vertical:not(.toggle-menu) .vertical-menu:not(:hover) .tw-menu-header .icon {
        @apply lg:block;
    }
    .tw-menu-content {
        @apply h-[calc(100vh_-_80px)] overflow-y-auto overflow-x-hidden;
    }
    .tw-nav-menu {
        @apply mt-2 space-y-1 px-4 pb-2;
    }
    .tw-menu-item .material-icons,
    .tw-menu-item .material-icons-outlined {
        @apply text-xl leading-none;
    }
    .tw-menu-link {
        @apply flex items-center p-2.5 hover:bg-light-gray hover:text-primary;
        @apply rounded-md font-normal dark:text-gray-400 hover:dark:bg-gray-700 dark:hover:text-gray-100;
    }
    .semi-dark .tw-menu-link {
        @apply text-gray-400 hover:bg-gray-700 hover:text-gray-100;
    }
    .tw-link-active {
        @apply bg-light-gray text-primary dark:bg-gray-700 dark:text-gray-300;
    }
    .tw-menu-link.active {
        @apply tw-link-active dark:hover:text-gray-200;
    }
    .semi-dark .tw-menu-link.active {
        @apply bg-gray-700 text-gray-100;
    }
    .tw-link-label {
        @apply mx-2 truncate text-sm font-medium;
    }
    .tw-dropdown-menu {
        @apply mt-1 space-y-1 overflow-hidden;
    }
    .tw-dropdown-item {
        @apply dark--text flex items-center rounded-md hover:text-gray-900 dark:hover:text-gray-100;
    }
    .menu-bullet-dot {
        @apply ml-2 mr-0.5 h-0.5 w-2 bg-primary;
    }
    .tw-dropdown-circle {
        @apply flex h-4 w-4 items-center justify-center text-[10px] leading-[unset];
    }
    .tw-dropdown-arrow {
        @apply ml-auto transform transition-transform group-[.active]:rotate-180;
    }
    .tw-dropdown-link {
        @apply tw-menu-link w-full truncate;
    }
    .tw-dropdown-link.active {
        @apply tw-link-active dark:hover:text-gray-200;
    }
    /* collapsible-vertical */
    .collapsible-vertical:not(.toggle-menu) .vertical-menu:not(:hover) .collapse-icon,
    .collapsible-vertical:not(.toggle-menu) .vertical-menu:not(:hover) .tw-dropdown-menu,
    .collapsible-vertical:not(.toggle-menu) .vertical-menu:not(:hover) .tw-dropdown-arrow,
    .collapsible-vertical:not(.toggle-menu) .vertical-menu:not(:hover) .documents-link .btn-label,
    .collapsible-vertical:not(.toggle-menu) .vertical-menu:not(:hover) .tw-nav-menu .tw-link-label {
        @apply lg:hidden lg:opacity-0;
    }
    /* vertical menu */
    .vertical.toggle-menu .vertical-menu .collapse-icon,
    .vertical.toggle-menu .vertical-menu .tw-dropdown-menu,
    .vertical.toggle-menu .vertical-menu .tw-dropdown-arrow,
    .vertical.toggle-menu .vertical-menu .documents-link .btn-label,
    .vertical.toggle-menu .vertical-menu .tw-nav-menu .tw-link-label {
        @apply lg:block lg:opacity-100 !important;
    }
    .documents-button {
        @apply flex h-12 items-center;
    }
    .documents-link {
        @apply btn-primary mb-0 flex w-full items-center justify-center justify-items-end py-2;
    }
}

